// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-sandbox builds a sandbox from a package with deps 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {
    "dep-0.1.0" => Object {
      "buildCommand": Array [],
      "buildType": "out-of-source",
      "dependencies": Map {},
      "errors": Array [],
      "exportedEnv": Object {},
      "id": "dep-0.1.0",
      "idInfo": Object {
        "dependencies": Array [],
        "env": Map {
          "PATH" => Object {
            "builtIn": true,
            "exclusive": false,
            "exported": true,
            "name": "PATH",
            "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
          },
          "SHELL" => Object {
            "builtIn": true,
            "exclusive": false,
            "exported": true,
            "name": "SHELL",
            "value": "env -i /bin/bash --norc --noprofile",
          },
        },
        "manifest": Object {
          "esy": Object {
            "build": Array [],
            "buildsInSource": false,
            "exportedEnv": Object {},
            "install": Array [],
            "sandboxType": "project",
          },
          "name": "dep",
          "version": "0.1.0",
        },
        "source": "dep",
      },
      "installCommand": Array [],
      "name": "dep",
      "packagePath": "node_modules/dep",
      "sourcePath": "node_modules/dep",
      "sourceType": "immutable",
      "version": "0.1.0",
    },
  },
  "errors": Array [],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "idInfo": Object {
    "dependencies": Array [
      "dep-0.1.0",
    ],
    "env": Map {
      "PATH" => Object {
        "builtIn": true,
        "exclusive": false,
        "exported": true,
        "name": "PATH",
        "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
      },
      "SHELL" => Object {
        "builtIn": true,
        "exclusive": false,
        "exported": true,
        "name": "SHELL",
        "value": "env -i /bin/bash --norc --noprofile",
      },
    },
    "manifest": Object {
      "esy": Object {
        "build": Array [],
        "buildsInSource": false,
        "exportedEnv": Object {},
        "install": Array [],
        "sandboxType": "project",
      },
      "name": "app",
      "version": "0.1.0",
    },
    "source": "app",
  },
  "installCommand": Array [],
  "name": "app",
  "packagePath": "",
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;

exports[`build-sandbox builds a sandbox from a single package 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {},
  "errors": Array [],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "idInfo": Object {
    "dependencies": Array [],
    "env": Map {
      "PATH" => Object {
        "builtIn": true,
        "exclusive": false,
        "exported": true,
        "name": "PATH",
        "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
      },
      "SHELL" => Object {
        "builtIn": true,
        "exclusive": false,
        "exported": true,
        "name": "SHELL",
        "value": "env -i /bin/bash --norc --noprofile",
      },
    },
    "manifest": Object {
      "esy": Object {
        "build": Array [],
        "buildsInSource": false,
        "exportedEnv": Object {},
        "install": Array [],
        "sandboxType": "project",
      },
      "name": "app",
      "version": "0.1.0",
    },
    "source": "app",
  },
  "installCommand": Array [],
  "name": "app",
  "packagePath": "",
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;

exports[`build-sandbox error: circular deps 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {
    "dep-0.1.0" => Object {
      "buildCommand": Array [],
      "buildType": "out-of-source",
      "dependencies": Map {},
      "errors": Array [
        Object {
          "message": "Circular dependency \\"app\\" found
  At app -> dep",
        },
      ],
      "exportedEnv": Object {},
      "id": "dep-0.1.0",
      "idInfo": Object {
        "dependencies": Array [],
        "env": Map {
          "PATH" => Object {
            "builtIn": true,
            "exclusive": false,
            "exported": true,
            "name": "PATH",
            "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
          },
          "SHELL" => Object {
            "builtIn": true,
            "exclusive": false,
            "exported": true,
            "name": "SHELL",
            "value": "env -i /bin/bash --norc --noprofile",
          },
        },
        "manifest": Object {
          "esy": Object {
            "build": Array [],
            "buildsInSource": false,
            "exportedEnv": Object {},
            "install": Array [],
            "sandboxType": "project",
          },
          "name": "dep",
          "version": "0.1.0",
        },
        "source": "dep",
      },
      "installCommand": Array [],
      "name": "dep",
      "packagePath": "node_modules/dep",
      "sourcePath": "node_modules/dep",
      "sourceType": "immutable",
      "version": "0.1.0",
    },
  },
  "errors": Array [
    Object {
      "message": "Circular dependency \\"app\\" found
  At app -> dep",
    },
  ],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "idInfo": Object {
    "dependencies": Array [
      "dep-0.1.0",
    ],
    "env": Map {
      "PATH" => Object {
        "builtIn": true,
        "exclusive": false,
        "exported": true,
        "name": "PATH",
        "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
      },
      "SHELL" => Object {
        "builtIn": true,
        "exclusive": false,
        "exported": true,
        "name": "SHELL",
        "value": "env -i /bin/bash --norc --noprofile",
      },
    },
    "manifest": Object {
      "esy": Object {
        "build": Array [],
        "buildsInSource": false,
        "exportedEnv": Object {},
        "install": Array [],
        "sandboxType": "project",
      },
      "name": "app",
      "version": "0.1.0",
    },
    "source": "app",
  },
  "installCommand": Array [],
  "name": "app",
  "packagePath": "",
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;

exports[`build-sandbox error: missing a dep 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {},
  "errors": Array [
    Object {
      "message": "Cannot resolve \\"dep\\" packages
  At app
  Did you forget to run \\"esy install\\" command?",
    },
  ],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "idInfo": Object {
    "dependencies": Array [],
    "env": Map {
      "PATH" => Object {
        "builtIn": true,
        "exclusive": false,
        "exported": true,
        "name": "PATH",
        "value": "$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
      },
      "SHELL" => Object {
        "builtIn": true,
        "exclusive": false,
        "exported": true,
        "name": "SHELL",
        "value": "env -i /bin/bash --norc --noprofile",
      },
    },
    "manifest": Object {
      "esy": Object {
        "build": Array [],
        "buildsInSource": false,
        "exportedEnv": Object {},
        "install": Array [],
        "sandboxType": "project",
      },
      "name": "app",
      "version": "0.1.0",
    },
    "source": "app",
  },
  "installCommand": Array [],
  "name": "app",
  "packagePath": "",
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;
